@@ -1,9 +1,0 @@
-Bonobo is a set of language and system independent CORBA interfaces
-for creating reusable components, controls and creating compound
-documents.
-
-We distinguish between `Bonobo' the name of the component architecture,
-and `bonobo' which is the C-based easy to use implementation of the
-Bonobo component architecture.
-
-libbonoboui contains a rich API for dealing graphical Bonobo Objects.
