@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.6923 2023/11/13 18:51:53 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.6924 2023/11/13 18:56:12 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -9970,3 +9970,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed audio/liteamp [wiz 2023-11-13]
 	Removed devel/libgnomeui [wiz 2023-11-13]
 	Updated devel/alex to 3.4.0.1 [wiz 2023-11-13]
+	Removed devel/libbonoboui [wiz 2023-11-13]
